--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,7 +10,14 @@
         <item name="colorSecondaryVariant">@color/icon</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@android:color/transparent</item>
+        <item name="android:windowLightStatusBar" tools:targetApi="23">true</item>
+        <item name="android:fitsSystemWindows">false</item>
+        <item name="android:windowBackground">@color/iconOnClick</item>
+
         <!-- Customize your theme here. -->
-    </style>
-</resources>
+        <!--<item name="android:windowTranslucentStatus">false</item>-->
+        <!--<item name="android:windowDrawsSystemBarBackgrounds">true</item>-->
+        <!-- <item name="android:windowTranslucentNavigation">true</item>-->
+     </style>
+ </resources>
