--- a/app/src/main/res/layout/fragment_nav_bar.xml
+++ b/app/src/main/res/layout/fragment_nav_bar.xml
@@ -5,6 +5,9 @@
 
     <data>
 
+        <variable
+            name="fragment"
+            type="com.yurakolesnikov.mooddiary.ui.NavBarFragment" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,6 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="40dp"
             android:background="@android:color/transparent"
+            android:onClick="@{() -> fragment.onDeleteAllPressed()}"
             android:src="@drawable/ic_delete_all"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -28,6 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
+            android:onClick="@{() -> fragment.onSortPressed()}"
             android:src="@drawable/ic_sort"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/button_filter"
@@ -40,6 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="40dp"
             android:background="@android:color/transparent"
+            android:onClick="@{() -> fragment.onFilterPressed()}"
             android:src="@drawable/ic_filter"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/button_add"
@@ -52,6 +58,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="12dp"
             android:layout_marginBottom="8dp"
+            android:onClick="@{() -> fragment.onAddPressed()}"
             android:src="@drawable/ic_add"
             app:backgroundTint="@color/fab"
             app:elevation="12dp"
@@ -66,37 +73,37 @@
             android:id="@+id/tv_delete_all"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:text="@string/delete_all"
+            android:textColor="@color/icon"
             android:textSize="@dimen/text_size"
             app:layout_constraintEnd_toEndOf="@+id/button_delete_all"
             app:layout_constraintStart_toStartOf="@+id/button_delete_all"
-            app:layout_constraintTop_toBottomOf="@+id/button_delete_all"
-            android:textColor="@color/icon"
-            android:layout_marginTop="4dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/button_delete_all" />
 
         <TextView
             android:id="@+id/tv_sort"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:text="@string/sort"
+            android:textColor="@color/icon"
             android:textSize="@dimen/text_size"
             app:layout_constraintEnd_toEndOf="@+id/button_sort"
             app:layout_constraintStart_toStartOf="@+id/button_sort"
-            app:layout_constraintTop_toBottomOf="@+id/button_sort"
-            android:textColor="@color/icon"
-            android:layout_marginTop="4dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/button_sort" />
 
         <TextView
             android:id="@+id/tv_filter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:text="@string/filter"
+            android:textColor="@color/icon"
             android:textSize="@dimen/text_size"
             app:layout_constraintEnd_toEndOf="@+id/button_filter"
             app:layout_constraintStart_toStartOf="@+id/button_filter"
-            app:layout_constraintTop_toBottomOf="@+id/button_filter"
-            android:textColor="@color/icon"
-            android:layout_marginTop="4dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/button_filter" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
