--- a/app/src/main/res/layout/fragment_add_note.xml
+++ b/app/src/main/res/layout/fragment_add_note.xml
@@ -1,49 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
+        <variable
+            name="fragment"
+            type="com.yurakolesnikov.mooddiary.ui.AddNoteFragment" />
 
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/dialog_fragment_background"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_rateYourHappiness"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="20dp"
             android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
             android:text="@string/rate_your_happiness"
             android:textColor="@color/fab"
             android:textSize="@dimen/text_main"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:textStyle="bold"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/text_field"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="20dp"
             android:elevation="0dp"
             android:gravity="center"
-            app:boxBackgroundColor="@color/icon"
-            app:boxCornerRadiusBottomEnd="15dp"
-            app:boxCornerRadiusBottomStart="15dp"
-            app:boxCornerRadiusTopEnd="15dp"
+            app:boxCornerRadiusBottomEnd="20dp"
+            app:boxCornerRadiusBottomStart="20dp"
+            app:boxCornerRadiusTopEnd="20dp"
             app:boxCornerRadiusTopStart="5dp"
-            app:boxStrokeWidth="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:boxStrokeColor="@color/color_selector"
+            app:boxStrokeWidth="4dp"
+            app:boxStrokeWidthFocused="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_rateYourHappiness"
-            android:layout_marginBottom="10dp">
+            app:layout_constraintTop_toBottomOf="@+id/tv_rateYourHappiness">
 
             <AutoCompleteTextView
                 android:id="@+id/autoCompleteTextView"
@@ -51,8 +56,33 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:inputType="none"
+                android:paddingVertical="0dp"
                 android:text="1" />
+
         </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/apply_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:layout_marginBottom="20dp"
+            android:backgroundTint="@color/icon"
+            android:drawablePadding="10dp"
+            android:shadowColor="@color/icon"
+            android:text="@string/apply"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            app:icon="@drawable/ic_check_mark"
+            app:iconSize="@dimen/icon"
+            app:iconTint="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_field"
+            android:onClick="@{() -> fragment.onApplyPressed()}"/>
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
