--- a/app/src/main/res/layout/fragment_nav_bar.xml
+++ b/app/src/main/res/layout/fragment_nav_bar.xml
@@ -67,7 +67,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:maxImageSize="15dp"
-            app:tint="@color/white" />
+            app:tint="@color/white"
+            android:elevation="2dp"/>
 
         <TextView
             android:id="@+id/tv_delete_all"
