--- a/app/src/main/res/layout/fragment_page.xml
+++ b/app/src/main/res/layout/fragment_page.xml
@@ -11,6 +11,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/tv_hash"/>
+
         <FrameLayout
             android:id="@+id/item_1"
             android:layout_width="150dp"
@@ -73,10 +83,10 @@
             android:id="@+id/item_6"
             android:layout_width="150dp"
             android:layout_height="150dp"
+            android:layout_marginBottom="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/item_5"
-            android:layout_marginBottom="10dp">
+            app:layout_constraintStart_toEndOf="@+id/item_5">
 
         </FrameLayout>
 
