--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -7,18 +7,26 @@
         <variable
             name="fragment"
             type="com.yurakolesnikov.mooddiary.ui.PageFragment" />
+
         <variable
             name="viewId"
             type="Integer" />
+
         <variable
             name="mood"
             type="Integer" />
+
+        <variable
+            name="itemViewBinding"
+            type="androidx.databinding.ViewDataBinding" />
+
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:onClick="@{() -> fragment.onItemClick(viewId, mood)}">
+        android:onClick="@{() -> fragment.onItemClick(viewId, mood, itemViewBinding, fragment)}">
 
         <ImageView
             android:id="@+id/image_view"
