Update works. Preview works.

--- a/app/src/main/res/layout/fragment_add_note.xml
+++ b/app/src/main/res/layout/fragment_add_note.xml
@@ -10,7 +10,7 @@
 
         <variable
             name="vm"
-            type="com.yurakolesnikov.mooddiary.ui.MainActivity.MainActivityViewModel" />
+            type="com.yurakolesnikov.mooddiary.ui.mainActivity.MainActivityViewModel" />
 
     </data>
 
