--- a/app/src/main/res/layout/fragment_add_note.xml
+++ b/app/src/main/res/layout/fragment_add_note.xml
@@ -82,7 +82,7 @@
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/apply_button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginTop="25dp"
             android:layout_marginBottom="20dp"
             android:backgroundTint="@color/icon"
@@ -90,6 +90,7 @@
             android:onClick="@{() -> fragment.onApplyPressed()}"
             android:shadowColor="@color/icon"
             android:text="@string/apply"
+            android:textSize="14dp"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textStyle="bold"
