--- a/app/src/main/res/layout/fragment_add_note.xml
+++ b/app/src/main/res/layout/fragment_add_note.xml
@@ -77,7 +77,8 @@
             app:layout_constraintStart_toEndOf="@id/text_field"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="40dp"
-            android:layout_marginTop="5dp"/>
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="10dp"/>
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/apply_button"
