Deleteion of first page when 4th is added. So 3 is max.

--- a/app/src/main/res/drawable/dot_active.xml
+++ b/app/src/main/res/drawable/dot_active.xml
@@ -6,7 +6,7 @@
             android:shape="ring"
             android:thickness="2dp"
             android:useLevel="false">
-            <solid android:color="@color/icon"/>
+            <solid android:color="@color/iconTransp" />
         </shape>
     </item>
 </layer-list>
