--- a/app/src/main/res/drawable/dot_inactive.xml
+++ b/app/src/main/res/drawable/dot_inactive.xml
@@ -6,7 +6,7 @@
             android:shape="ring"
             android:thickness="2dp"
             android:useLevel="false">
-            <solid android:color="@color/gray"/>
+            <solid android:color="@color/grayTransp"/>
         </shape>
     </item>
 </layer-list>
