--- a/app/src/main/res/layout/fragment_nav_bar.xml
+++ b/app/src/main/res/layout/fragment_nav_bar.xml
@@ -8,6 +8,11 @@
         <variable
             name="fragment"
             type="com.yurakolesnikov.mooddiary.ui.NavBarFragment" />
+        <variable
+            name="vm"
+            type="com.yurakolesnikov.mooddiary.ui.mainActivity.MainActivityViewModel" />
+
+        <import type="android.view.View"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -17,9 +22,9 @@
 
         <ImageButton
             android:id="@+id/button_delete_all"
-            android:layout_width="65dp"
-            android:layout_height="65dp"
-            android:layout_marginStart="30dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="40dp"
             android:layout_marginTop="18dp"
             android:src="@drawable/button_delete_all"
             android:scaleType="fitCenter"
@@ -27,16 +32,18 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:visibility="visible" />
+            android:visibility="visible"
+            android:background="@android:color/transparent"/>
 
 
         <ImageButton
             android:id="@+id/button_sort"
-            android:layout_width="65dp"
-            android:layout_height="65dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:onClick="@{() -> fragment.onSortPressed()}"
             android:src="@drawable/button_sort"
             android:scaleType="fitCenter"
+            android:background="@android:color/transparent"
             android:layout_marginTop="18dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/button_filter"
@@ -45,16 +52,17 @@
 
         <ImageButton
             android:id="@+id/button_filter"
-            android:layout_width="65dp"
-            android:layout_height="65dp"
-            android:layout_marginEnd="30dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="40dp"
             android:onClick="@{() -> fragment.onFilterPressed()}"
             android:src="@drawable/button_filter"
             android:scaleType="fitCenter"
             android:layout_marginTop="18dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/button_add"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="@android:color/transparent"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/button_add"
@@ -74,6 +82,16 @@
             app:layout_constraintTop_toTopOf="parent"
             app:maxImageSize="15dp"
             app:tint="@color/white" />
+
+        <ImageView
+            android:layout_width="5dp"
+            android:layout_height="5dp"
+            android:src="@drawable/dot_sort_indicator"
+            app:layout_constraintTop_toTopOf="@id/button_sort"
+            app:layout_constraintEnd_toEndOf="@id/button_sort"
+            android:layout_marginEnd="10dp"
+            android:padding="0dp"
+            android:visibility="@{vm.sortTrigger ? View.VISIBLE : View.INVISIBLE}"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
