Delete note works. Undo doesn't work.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,6 @@
     <color name="gray">#505050</color>
     <color name="grayTransp">#80505050</color>
     <color name="orange">#ff9000</color>
+    <color name="red">#A51B1B</color>
 </resources>
 
