--- a/app/src/main/res/layout/fragment_add_note.xml
+++ b/app/src/main/res/layout/fragment_add_note.xml
@@ -12,6 +12,12 @@
             name="vm"
             type="com.yurakolesnikov.mooddiary.ui.mainActivity.MainActivityViewModel" />
 
+        <variable
+            name="isAddDialog"
+            type="Boolean" />
+
+        <import type="android.view.View"/>
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -81,27 +87,53 @@
             android:layout_marginStart="10dp"/>
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-            android:id="@+id/apply_button"
+        android:id="@+id/apply_button"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="@color/icon"
+        android:drawablePadding="10dp"
+        android:onClick="@{() -> fragment.onApplyPressed()}"
+        android:shadowColor="@color/icon"
+        android:text="@string/apply"
+        android:textSize="14dp"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        app:icon="@drawable/ic_check_mark"
+        app:iconSize="@dimen/icon"
+        app:iconTint="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/delete_note_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_field" />
+
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/delete_note_button"
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_marginTop="25dp"
+            android:layout_height="40dp"
             android:layout_marginBottom="20dp"
-            android:backgroundTint="@color/icon"
+            android:backgroundTint="@color/white"
             android:drawablePadding="10dp"
-            android:onClick="@{() -> fragment.onApplyPressed()}"
+            android:onClick="@{() -> fragment.onDeleteNotePressed()}"
             android:shadowColor="@color/icon"
-            android:text="@string/apply"
+            android:text="@string/delete_note"
             android:textSize="14dp"
+            android:paddingTop="0dp"
+            android:paddingBottom="0dp"
             android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            app:icon="@drawable/ic_check_mark"
-            app:iconSize="@dimen/icon"
-            app:iconTint="@color/white"
+            android:textColor="@color/red"
+            android:textStyle="normal"
+            app:icon="@drawable/ic_delete_all"
+            app:iconSize="@dimen/icon_small"
+            app:iconTint="@color/red"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/text_field" />
+            app:layout_constraintTop_toBottomOf="@id/apply_button"
+            android:visibility="@{isAddDialog ? View.GONE : View.VISIBLE }"
+            android:shadowRadius="0.1"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
