--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="icon">24dp</dimen>
+    <dimen name="icon_small">16dp</dimen>
     <dimen name="icon_fit">26dp</dimen>
     <dimen name="text_size">10dp</dimen>
     <dimen name="text_main">17dp</dimen>
