--- a/app/src/main/res/layout/fragment_nav_bar.xml
+++ b/app/src/main/res/layout/fragment_nav_bar.xml
@@ -93,5 +93,16 @@
             android:padding="0dp"
             android:visibility="@{vm.sortTrigger ? View.VISIBLE : View.INVISIBLE}"/>
 
+        <ImageView
+            android:layout_width="5dp"
+            android:layout_height="5dp"
+            android:src="@drawable/dot_sort_indicator"
+            app:layout_constraintTop_toTopOf="@id/button_filter"
+            app:layout_constraintEnd_toEndOf="@id/button_filter"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="15dp"
+            android:padding="0dp"
+            android:visibility="@{vm.filterTrigger ? View.VISIBLE : View.INVISIBLE}"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
